--- a/wp-content/themes/analog/app/scss/_more.scss
+++ b/wp-content/themes/analog/app/scss/_more.scss
@@ -84,7 +84,6 @@
       h3 {
         text-align: center;
       }
-      margin-bottom: 2.4rem;
     }
     @include breakpoint-up(medium) {
       grid-column: 2/12;
