--- a/wp-content/themes/analog/app/scss/_takeaway.scss
+++ b/wp-content/themes/analog/app/scss/_takeaway.scss
@@ -54,7 +54,7 @@
     }
 
     p:last-of-type {
-      margin-top: 2.4rem;
+      margin-top: 3rem;
     }
   }
 
